--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,10 +13,15 @@ body {
 /* general */
 
 .container {
+  display: flex;
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
   clear: both;
+}
+.flex-container {
+  @media screen and (min-width: 640px){
+    display: flex;
 }
 
 h1,
